added current setup, without undercloud

--- a/v3/nic-config/distributedcomputehci.yaml
+++ b/v3/nic-config/distributedcomputehci.yaml
@@ -1,7 +1,7 @@
 
 heat_template_version: rocky
 description: >
-  Software Config to drive os-net-config with 2 bonded nics on a bridge with VLANs attached for the Controller role.
+  Software Config to drive os-net-config with 2 bonded nics on a bridge with VLANs attached for the DistributedComputeHCI role.
 parameters:
   ControlPlaneIp:
     default: ''
@@ -121,32 +121,6 @@ parameters:
       Unless the default is changed, the parameter is automatically resolved
       from the subnet host_routes attribute.
     type: json
-  ExternalIpSubnet:
-    default: ''
-    description: IP address/subnet on the external network
-    type: string
-  ExternalNetworkVlanID:
-    default: 213
-    description: Vlan ID for the external network traffic.
-    type: number
-  ExternalMtu:
-    default: 1500
-    description: The maximum transmission unit (MTU) size(in bytes) that is
-      guaranteed to pass through the data path of the segments in the
-      External network.
-    type: number
-  ExternalInterfaceDefaultRoute:
-    default: ''
-    description: default route for the external network
-    type: string
-  ExternalInterfaceRoutes:
-    default: []
-    description: >
-      Routes for the external network traffic.
-      JSON route e.g. [{'destination':'10.0.0.0/16', 'nexthop':'10.0.0.1'}]
-      Unless the default is changed, the parameter is automatically resolved
-      from the subnet host_routes attribute.
-    type: json
   DnsServers: # Override this via parameter_defaults
     default: []
     description: >
@@ -183,7 +157,6 @@ resources:
             - {get_param: StorageMgmtMtu}
             - {get_param: InternalApiMtu}
             - {get_param: TenantMtu}
-            - {get_param: ExternalMtu}
 
   OsNetConfigImpl:
     type: OS::Heat::SoftwareConfig
@@ -210,6 +183,9 @@ resources:
                 routes:
                   list_concat_unique:
                     - get_param: ControlPlaneStaticRoutes
+                    - - default: true
+                        next_hop:
+                          get_param: ControlPlaneDefaultRoute
               - type: ovs_bridge
                 name: br-provider
                 dns_servers:
@@ -281,21 +257,6 @@ resources:
                   routes:
                     list_concat_unique:
                       - get_param: TenantInterfaceRoutes
-                - type: vlan
-                  mtu:
-                    get_param: ExternalMtu
-                  vlan_id:
-                    get_param: ExternalNetworkVlanID
-                  device: br-provider
-                  addresses:
-                  - ip_netmask:
-                      get_param: ExternalIpSubnet
-                  routes:
-                    list_concat_unique:
-                      - get_param: ExternalInterfaceRoutes
-                      - - default: true
-                          next_hop:
-                            get_param: ExternalInterfaceDefaultRoute
 outputs:
   OS::stack_id:
     description: The OsNetConfigImpl resource.
