--- a/v3/overcloud_images.yaml
+++ b/v3/overcloud_images.yaml
@@ -1,6 +1,6 @@
-# Generated with the following on 2020-09-16T10:00:25.606200
+# Generated with the following on 2020-09-21T19:56:45.952933
 #
-#   openstack tripleo container image prepare -e containers-prepare-parameter.yaml --output-env-file=overcloud_images.yaml
+#   openstack tripleo container image prepare -e containers-prepare-parameter.yaml -r roles_data.yaml --output-env-file=overcloud_images.yaml --verbose
 #
 
 parameter_defaults:
