--- a/v3/node-info.yaml
+++ b/v3/node-info.yaml
@@ -63,7 +63,6 @@ parameter_defaults:
   StorageMgmtVirtualFixedIPs: [{'ip_address':'172.16.3.250'}]
   StorageVirtualFixedIPs: [{'ip_address':'172.16.1.250'}]
 
-
 #  DistributedComputeHCIParameters:
 #    NovaReservedHostMemory: 16384
   DistributedComputeHCIExtraConfig:
@@ -101,22 +100,23 @@ parameter_defaults:
         osd: "profile rbd pool=images"
       key: "AQCgpWRfuU8hLBAAP7EHl5AxpnjA+fOpmHm5Qw=="
       mode: "0600"
+#  CephAnsibleDiskConfig:
+#    # osd_scenario: collocated - possible
+#    #lvm_volumes:
+#    #  - data: '/dev/sdc'
+#    #    crush_device_class: 'ssd'
+#    #  - data: '/dev/sde'
+#    #    crush_device_class: 'ssd'
+#    #  - data: '/dev/sde'
+#    #    crush_device_class: 'ssd'
   CephAnsibleDiskConfig:
     devices:
       - /dev/sdc
       - /dev/sde
       - /dev/sdd
-    # osd_scenario: collocated - possible
-    #lvm_volumes:
-    #  - data: '/dev/sdc'
-    #    crush_device_class: 'ssd'
-    #  - data: '/dev/sde'
-    #    crush_device_class: 'ssd'
-    #  - data: '/dev/sde'
-    #    crush_device_class: 'ssd'
     osd_scenario: lvm
     osd_objectstore: bluestore
-  CephPoolDefaultSize: 2
+  CephPoolDefaultSize: 1
   CephPoolDefaultPgNum: 1024
   CephConfigOverrides:
     global:
@@ -145,14 +145,14 @@ parameter_defaults:
     - name: images
       pg_num: 64
       application: rbd
-    - name: metrics
-      pg_num: 10
-      pgp_num: 10
-      size: 1
-      application: openstack_gnocchi
-  CephAnsibleEnvironmentVariables:
-    ANSIBLE_SSH_RETRIES: '6'
-    DEFAULT_FORKS: '25'
+#    - name: metrics
+#      pg_num: 10
+#      pgp_num: 10
+#      size: 1
+#      application: openstack_gnocchi
+#  CephAnsibleEnvironmentVariables:
+#    ANSIBLE_SSH_RETRIES: '6'
+#    DEFAULT_FORKS: '25'
 
   KernelArgs: "crashkernel=no rhgb console=ttyS1,115200 console=ttyS0,115200n8"
   NovaReservedHostMemory: 16384
