--- a/v3/roles-data.yaml
+++ b/v3/roles-data.yaml
@@ -21,8 +21,8 @@
 #      subnet: storage_subnet
 #    StorageMgmt:
 #      subnet: storage_mgmt_subnet
-    Tenant:
-      subnet: tenant_subnet
+#    Tenant:
+#      subnet: tenant_subnet
   # For systems with both IPv4 and IPv6, you may specify a gateway network for
   # each, such as ['ControlPlane', 'External']
   default_route_networks: ['External']
