undercloud_custom_env - to upload during pxe boot. undercloud.deploy3 - added config file to have overcloud-full image with all packages.

--- a/undercloud-v3/undercloud.conf
+++ b/undercloud-v3/undercloud.conf
@@ -118,6 +118,7 @@ undercloud_ntp_servers = 0.pool.ntp.org,1.pool.ntp.org,2.pool.ntp.org,3.pool.ntp
 undercloud_timezone = Europe/Vilnius
 undercloud_update_packages = true
 #upgrade_cleanup = false
+custom_env_files = /home/stack/undercloud_custom_env.yaml
 
 
 [ctlplane-subnet]
@@ -127,10 +128,10 @@ dhcp_end = 10.40.1.229
 #dhcp_exclude =
 #dns_nameservers = 10.221.16.11,10.221.16.10
 dns_nameservers = 158.129.192.2
-#gateway = 10.40.1.254
+gateway = 10.40.1.254
 #host_routes = [{destination: 10.10.10.0/24, nexthop: 192.168.24.1}]
 inspection_iprange = 10.40.1.230,10.40.1.249
-#masquerade = true
+masquerade = true
 
 #[remote-provision]
 #cidr = 10.41.94.240/28
